--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 body {
   margin: 0;
-  padding: 0;
 }
 nav {
   display: flex;
   height: 100px;
-  padding: 0px 200px 0px 120px;
   justify-content: flex-start;
   align-items: center;
   gap: 40px;
+  padding: 0px 120px;
 }
 .navItem {
   font-weight: 600;
@@ -18,9 +17,10 @@ nav {
 }
 header {
   height: 462px;
-  padding: 100px 120px;
   display: flex;
   justify-content: space-between;
+  margin-top: 100px;
+  padding: 0px 120px;
 }
 .badge {
   width: fit-content;
@@ -38,7 +38,6 @@ header {
 }
 header h1 {
   color: #333;
-  font-family: Pretendard;
   font-size: 64px;
   font-style: normal;
   font-weight: 600;
@@ -59,12 +58,11 @@ header h1 em {
   display: flex;
 }
 .headerLink {
-  background-color: yellow;
   padding: 24px 40px;
   display: block;
   text-decoration: none;
   border-radius: 16px;
-  margin-right: 6px;
+  margin-right: 10px;
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
@@ -76,7 +74,7 @@ header h1 em {
   align-items: center;
   justify-content: center;
   width: 190px;
-  height: 36px;
+  height: 30px;
   color: #e6eeff;
 }
 .resume {
@@ -84,8 +82,8 @@ header h1 em {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 189px;
-  height: 28px;
+  width: 182px;
+  height: 22px;
   border: 4px solid #403930;
   color: #403930;
 }
@@ -100,4 +98,77 @@ header h1 em {
   width: 345px;
   height: 330px;
   object-fit: cover;
+}
+.infoContainer {
+  position: relative;
+  margin: 100px 0px;
+  padding: 100px 120px;
+  background: linear-gradient(
+    96deg,
+    rgba(189, 210, 255, 0.4) 1.72%,
+    rgba(116, 224, 215, 0.4) 158.93%
+  );
+}
+.infoTitle {
+  color: #000;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 125%; /* 50px */
+  letter-spacing: -0.8px;
+  margin-bottom: 20px;
+}
+.info {
+  color: #333;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 30px */
+}
+.superman_icon {
+  position: absolute;
+  width: 119px;
+  height: 119px;
+  right: 400px;
+  top: 43px;
+}
+.techContainer {
+  padding: 0px 120px;
+}
+.techInfoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 80px;
+}
+.techTitle {
+  color: #000;
+  text-align: center;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px; /* 65% */
+  letter-spacing: -0.8px;
+  margin-bottom: 24px;
+}
+.techInfo {
+  color: #333;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 130% */
+}
+.iconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 40px;
+}
+.iconContainer img {
+  width: 100px;
+  height: 100px;
+  margin: 0px 40px;
 }
