--- a/style.css
+++ b/style.css
@@ -235,3 +235,60 @@ header h1 em {
   line-height: 150%; /* 30px */
   text-decoration-line: underline;
 }
+.feedbackContainer {
+  padding: 80px 0px 100px 0px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.feedbackTitle {
+  color: #403930;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 125%; /* 50px */
+  letter-spacing: -0.8px;
+  margin-bottom: 60px;
+}
+.feedbackScrollContainer {
+  display: flex;
+}
+.feedback {
+  background-color: #fafafa;
+  padding: 20px 36px;
+  width: 350px;
+  border-radius: 15px;
+  margin-right: 40px;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.15);
+}
+.feedbackInfo {
+  color: #403930;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 30px */
+  white-space: normal;
+}
+.feedbackFrom {
+  margin-top: 20px;
+  color: #403930;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px; /* 125% */
+}
+.aspirationContainer {
+  background: #e6eeff;
+  padding: 100px 120px;
+  display: flex;
+  align-items: center;
+}
+.aspiration {
+  color: #403930;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%; /* 60px */
+  letter-spacing: -0.96px;
+}
