--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ nav {
   color: black;
 }
 header {
-  height: 462px;
+  /*height: 462px;*/
   display: flex;
   justify-content: space-between;
   margin-top: 100px;
@@ -79,8 +79,8 @@ header h1 em {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 190px;
-  height: 30px;
+  /*width: 190px;
+  height: 30px;*/
   color: #e6eeff;
 }
 .resume {
@@ -88,8 +88,8 @@ header h1 em {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 182px;
-  height: 22px;
+  /*width: 182px;
+  height: 22px;*/
   border: 4px solid #403930;
   color: #403930;
 }
@@ -167,16 +167,15 @@ header h1 em {
   line-height: 26px; /* 130% */
 }
 .iconContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  place-items: center;
+  place-content: center;
 }
 .iconContainer img {
   width: 100px;
   height: 100px;
-  margin: 0px 40px;
+  margin: 30px;
 }
 .projectContainer {
   padding: 80px 120px 120px 120px;
@@ -194,7 +193,7 @@ header h1 em {
 .myProject {
   background-color: #e6eeff;
   border-radius: 24px;
-  height: 330px;
+  /*height: 330px;*/
   padding: 0px 40px;
   display: flex;
   justify-content: space-between;
@@ -248,8 +247,8 @@ header h1 em {
 }
 .projectImgContainer img {
   width: 155px;
-  height: 280px;
-  margin-inline: 10px;
+  height: 260px;
+  margin: 15px 10px;
   border-radius: 16px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15);
   object-fit: cover;
@@ -359,4 +358,8 @@ footer {
 
   position: absolute;
   right: 100px;
+}
+.SNSIconContainer img:nth-child(1),
+.SNSIconContainer img:nth-child(2) {
+  margin-right: 35px;
 }
