feat: 프로젝트 줄바꿈 기능 추가

--- a/style.css
+++ b/style.css
@@ -218,6 +218,15 @@ header h1 em {
   font-weight: 500;
   line-height: 150%; /* 24px */
 }
+.projectInfoText {
+  margin-top: 20px;
+  display: -webkit-box;
+  word-wrap: break-word;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 .projectLinkContainer {
   margin-top: 36px;
 }
