--- a/web/style.css
+++ b/web/style.css
@@ -177,6 +177,19 @@ header h1 b {
   height: 100px;
   margin: 30px;
 }
+.iconContainer img:hover {
+  /*transform: scale(1.5);*/
+  animation: hoverAnimation 0.5s infinite alternate;
+  z-index: 1;
+}
+@keyframes hoverAnimation {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
 .projectContainer {
   padding: 80px 120px 120px 120px;
   background: rgba(244, 244, 244, 0.5);
