fix: techIcon 반응형 grid 수정

--- a/web/responsive.css
+++ b/web/responsive.css
@@ -82,6 +82,8 @@ header h1 {
 }
 .techContainer {
   padding: 60px 24px;
+  display: flex;
+  flex-direction: column;
 }
 .techInfoContainer {
   align-items: flex-start;
@@ -97,11 +99,17 @@ header h1 {
   text-align: start;
 }
 .iconContainer {
+  display: grid;
+  place-items: center;
+  place-content: center;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+  align-self: center;
 }
 .iconContainer img {
   width: 80px;
   height: 80px;
+  margin: 0;
 }
 .projectContainer {
   padding: 60px 24px;
