--- a/web/responsive.css
+++ b/web/responsive.css
@@ -85,9 +85,6 @@ header h1 {
   display: flex;
   flex-direction: column;
 }
-.techInfoContainer {
-  align-items: flex-start;
-}
 .techTitle {
   /* sectionTitle */
   font-size: 24px;
@@ -96,7 +93,6 @@ header h1 {
 .techInfo {
   font-size: 14px;
   line-height: 150%; /* 21px */
-  text-align: start;
 }
 .iconContainer {
   display: grid;
@@ -105,6 +101,7 @@ header h1 {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
   align-self: center;
+  width: 0;
 }
 .iconContainer img {
   width: 80px;
