--- a/web/style.css
+++ b/web/style.css
@@ -150,6 +150,9 @@ header h1 b {
 }
 .techContainer {
   padding: 100px 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .techInfoContainer {
   display: flex;
@@ -186,7 +189,7 @@ header h1 b {
   display: flex;
   white-space: pre;
   flex-wrap: wrap;
-  width: fit-content;
+  width: 800px;
   height: fit-content;
   justify-content: center;
 }
